--- a/filemanager/src/main/res/values-ru/strings.xml
+++ b/filemanager/src/main/res/values-ru/strings.xml
@@ -2,6 +2,10 @@
 <resources>
     <string name="wm_fm_app_name">Файловый менеджер</string>
 
+    <!-- Hints -->
+    <string name="wm_fm_hint_file_name">Имя файла</string>
+    <string name="wm_fm_hint_new_folder">Новая папка</string>
+
     <!-- Date/time format order (%1$s: date; %2$s: time) -->
     <string name="wm_fm_datetime_format_order">%1$s %2$s</string>
 
